# otus-cpp-ip_filter

./: CMakeLists.txt  version.h.in
.github/workflows/: test.yml
include/: Address.h  pretty.h
src/: Address.cpp  CMakeLists.txt  auto.cpp  ip_filter.cpp  lambda.cpp  main.cpp
tests/: address_test.cc  integration_test.bash
